--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,12 @@
 
     <uses-sdk android:minSdkVersion="8"
             android:targetSdkVersion="19"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
             android:label="@string/app_name"
             android:icon="@drawable/ic_app">
@@ -17,5 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".CodeInfoActivity"/>
     </application>
 </manifest>
